# VORTEX

./: .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md  WALKTHROUGH.md  commandments.md  defects.md  docker-compose.yml  implementation_plan.md  logical_blueprint.md  shard_0.wal  shard_1.wal  shard_2.wal  standard.md
benchmarks/: Cargo.toml  stress_test.rs
vortex-core/: Cargo.toml
vortex-core/examples/: benchmark.rs
vortex-core/src/: lib.rs  proxy.rs  reactor.rs  telemetry_beacon.rs
vortex-core/src/index/: distance.rs  hnsw.rs  mod.rs  quantization.rs  simd.rs
vortex-core/src/storage/: batch.rs  mod.rs  wal.rs
vortex-dashboard/: Cargo.toml
vortex-dashboard/src/: config.rs  lifecycle.rs  main.rs  metrics.rs  telemetry_server.rs  tui.rs
vortex-io/: Cargo.toml
vortex-io/src/: lib.rs  memory.rs  net.rs  ring.rs  storage.rs
vortex-io/src/platform/: affinity.rs  mod.rs  topology.rs
vortex-rpc/: Cargo.toml
vortex-rpc/src/: lib.rs
vortex-server/: Cargo.toml
vortex-server/examples/: pulse_check.rs  vortex_stress.rs
vortex-server/src/: main.rs
