[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stress_test"
path = "stress_test.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
vortex-rpc = { path = "../vortex-rpc" }
vortex-core = { path = "../vortex-core" }
rand = "0.8"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
