[package]
name = "vortex-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
libc = "0.2"
