[package]
name = "vortex-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
libc = "0.2"
ctrlc = "3.5.1"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
env_logger = "0.11.8"
