[package]
name = "vortex-io"
version = "0.1.0"
edition = "2021"

[dependencies]
io-uring = "0.6"
core_affinity = "0.8"
nix = { version = "0.27", features = ["mman", "socket"] }
thiserror = "1.0"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
hwloc2 = "2.2.0"
log = "0.4"
crossbeam-utils = "0.8"
