[package]
name = "vortex-server"
version = "0.1.0"
edition = "2021"

[dependencies]
vortex-io = { path = "../vortex-io" }
vortex-core = { path = "../vortex-core" }
vortex-rpc = { path = "../vortex-rpc" }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.4"
